--- a/signup.html
+++ b/signup.html
@@ -26,7 +26,7 @@
     />
 
     <!-- Favicons -->
-    <link
+    <!-- <link
       rel="apple-touch-icon"
       href="/docs/5.0/assets/img/favicons/apple-touch-icon.png"
       sizes="180x180"
@@ -50,7 +50,7 @@
       color="#7952b3"
     />
     <link rel="icon" href="/docs/5.0/assets/img/favicons/favicon.ico" />
-    <meta name="theme-color" content="#7952b3" />
+    <meta name="theme-color" content="#7952b3" /> -->
 
     <style>
       .bd-placeholder-img {
